--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
-  <body>
+  <section>
     <nav id="desktop-nav">
       <div class="logo">Shiv Desai</div>
       <div>
@@ -43,9 +43,9 @@
         />
       </div>
       <div class="section__text">
-        <p class="section__text_p1">Hello, I'm</p>
+        <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Shiv Desai</h1>
-        <p class="section__text_p2">CS & Math @ Emory University</p>
+        <p class="section__text__p2">CS & Math @ Emory University</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -74,7 +74,7 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text_p1">Get To Know More</p>
+      <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
@@ -84,7 +84,7 @@
             class="about-pic"
           />
         </div>
-        <div class="about-details-containers">
+        <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img
@@ -92,11 +92,198 @@
                 alt="Experience Icon"
                 class="icon"
               />
+              <h3>Experience</h3>
+              <p>
+                Data Archetect Intern @ Fiserv <br />Business Analyst Intern @
+                Fiserv
+              </p>
             </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="Education Icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>
+                B.Sc. Bachelors Degree <br />Computer Science and Mathematics
+              </p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              Shiv is a junior at Emory Univeristy studying Computer Science and
+              Mathematics. He has worked as a Data Archetiect at Fiserv Inc. and
+              is now looking to transition into software engineering. In his
+              free time Shiv likes to play golf, watch the Premier League,
+              workout, and hang out with his niece.
+            </p>
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href = './#experience'"
+      />
     </section>
+    <section id = "experience">
+    <p class = "section__text__p1">Explore My </p>
+    <h1 class = "title">Experience</h1>
+    <div class = "experience-details-container">
+      <div class = "about-containers">
+        <div class = "details-containers">
+          <h2 class = "experience-sub-title">Frontend Developement</h2>
+          <div class = "article-container">
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> HTML </h3>
+              <p> Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> CSS </h3>
+              <p> Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> JavaScript </h3>
+              <p> Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> TypeScript </h3>
+              <p> Basic</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Flutter </h3>
+              <p> Basic </p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> TypeScript </h3>
+              <p> Basic </p>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class = "details-containers">
+          <h2 class = "experience-sub-title">Backend Developement</h2>
+          <div class = "article-container">
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Go Lang </h3>
+              <p> Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Java </h3>
+              <p> Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Python </h3>
+              <p> Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> C </h3>
+              <p> Basic</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Rust </h3>
+              <p> Basic </p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/checkmark.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> SQL </h3>
+              <p> Basic </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+    <img
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href = './#projects'"
+      />
+    <section>
     <script src="script.js"></script>
   </body>
 </html>
