--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
           <span> </span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <ul>
+            <li><a href="#about" onclick="toggleMenu()">About</a></li>
+            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -133,7 +135,7 @@
     <h1 class = "title">Experience</h1>
     <div class = "experience-details-container">
       <div class = "about-containers">
-        <div class = "details-containers">
+        <div class = "details-container">
           <h2 class = "experience-sub-title">Frontend Developement</h2>
           <div class = "article-container">
             <article>
@@ -191,20 +193,9 @@
               <p> Basic </p>
               </div>
             </article>
-            <article>
-              <img 
-              src = "assets/checkmark.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> TypeScript </h3>
-              <p> Basic </p>
-              </div>
-            </article>
           </div>
         </div>
-        <div class = "details-containers">
+        <div class = "details-container">
           <h2 class = "experience-sub-title">Backend Developement</h2>
           <div class = "article-container">
             <article>
@@ -248,7 +239,7 @@
               />
               <div>
                 <h3> C </h3>
-              <p> Basic</p>
+              <p> Basic </p>
               </div>
             </article>
             <article>
@@ -283,7 +274,96 @@
         class="icon arrow"
         onclick="location.href = './#projects'"
       />
-    <section>
-    <script src="script.js"></script>
+  </section>
+  <section id = "projects">
+    <p class = "section__text__p1">Browse My Recent</p>
+    <h1 class = "title">Projects</h1>
+    <div class = "experience-details-container">
+      <div class = "about-containers">
+      <div class = "details-container color-container">
+        <div class = "article-container">
+          <img 
+            src = "assets/project-1.png" 
+            alt = "Project 1" 
+            class = "project-img"
+          />
+        </div>
+        <h2 class = "experience-sub-title project-title">Project One</h2>
+        <div class = "btn-container">
+          <button 
+              class = "btn btn-color-2 project-btn" 
+              onclick = "location.href='https://github.com/'"
+          >
+            Github
+          </button>
+          <button 
+              class = "btn btn-color-2 project-btn" 
+              onclick = "location.href='https://github.com/'"
+          >
+            Live Demo
+          </button>
+        </div>
+      </div>
+      <div class = "details-container color-container">
+        <div class = "article-container">
+          <img 
+            src = "assets/project-2.png" 
+            alt = "Project 2" 
+            class = "project-img"
+          />
+        </div>
+        <h2 class = "experience-sub-title project-title">Project Two</h2>
+        <div class = "btn-container">
+          <button 
+              class = "btn btn-color-2 project-btn" 
+              onclick = "location.href='https://github.com/'"
+          >
+            Github
+          </button>
+          <button 
+              class = "btn btn-color-2 project-btn" 
+              onclick = "location.href='https://github.com/'"
+          >
+            Live Demo
+          </button>
+        </div>
+      </div>
+    </div>
+    </div>
+    <img
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href = './#contact'"
+      />
+  </section>
+  <section id = "contact" >
+    <p class = "section__text__p1">Get In Touch</p>
+    <h1 class = "title">Contact Me</h1>
+    <div class = "contact-info-upper-container">
+      <div class = "contact-info-container">
+        <img src="./assets/email.png" alt="Email Icon" class="icon contact-icon email-icon" />
+        <p><a href = "mailto:srdesa5@emory.edu">srdesa5@emory.edu</a></p>
+
+      </div>
+      <div class = "contact-info-container">
+        <img src="./assets/linkedin.png" alt="LinkeIn Icon" class="icon contact-icon" />
+        <p><a href = "https://www.linkedin.com/in/shivdesai02/">LinkedIn</a></p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <div class = "nav-links-container">
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </footer>
+  <script src="script.js"></script>
   </body>
 </html>
