--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div class = "details-container color-container">
         <div class = "article-container">
           <img 
-            src = "assets/project-1.png" 
+            src = "assets/MarginFi.png" 
             alt = "Project 1" 
             class = "project-img"
           />
@@ -296,18 +296,12 @@
           >
             Github
           </button>
-          <button 
-              class = "btn btn-color-2 project-btn" 
-              onclick = "location.href='https://github.com/'"
-          >
-            Live Demo
-          </button>
         </div>
       </div>
       <div class = "details-container color-container">
         <div class = "article-container">
           <img 
-            src = "assets/project-2.png" 
+            src = "assets/MLPhoto.jpg" 
             alt = "Project 2" 
             class = "project-img"
           />
@@ -320,11 +314,6 @@
           >
             Github
           </button>
-          <button 
-              class = "btn btn-color-2 project-btn" 
-              onclick = "location.href='https://github.com/'"
-          >
-            Live Demo
           </button>
         </div>
       </div>
