--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Shiv Desai</h1>
         <p class="section__text__p2">CS & Math @ Emory University</p>
         <div class="btn-container">
@@ -131,16 +130,15 @@
       />
     </section>
     <section id = "experience">
-    <p class = "section__text__p1">Explore My </p>
     <h1 class = "title">Experience</h1>
     <div class = "experience-details-container">
       <div class = "about-containers">
         <div class = "details-container">
-          <h2 class = "experience-sub-title">Frontend Developement</h2>
+          <h2 class = "experience-sub-title">Frontend</h2>
           <div class = "article-container">
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -151,7 +149,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -162,7 +160,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -173,7 +171,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -184,7 +182,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -196,11 +194,71 @@
           </div>
         </div>
         <div class = "details-container">
-          <h2 class = "experience-sub-title">Backend Developement</h2>
+          <h2 class = "experience-sub-title">Frameworks</h2>
           <div class = "article-container">
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> HTML </h3>
+              <p> Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> CSS </h3>
+              <p> Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> JavaScript </h3>
+              <p> Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> TypeScript </h3>
+              <p> Basic</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Flutter </h3>
+              <p> Basic </p>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class = "details-container">
+          <h2 class = "experience-sub-title">Backend</h2>
+          <div class = "article-container">
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -211,7 +269,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -222,7 +280,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -233,7 +291,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -244,7 +302,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
@@ -255,7 +313,7 @@
             </article>
             <article>
               <img 
-              src = "assets/checkmark.png" 
+              src = "assets/VerifiedBadge.png" 
               alt = "Experience Icon" 
               class = "icon"
               />
