Media Querie Updates

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               class = "icon"
               />
               <div>
-                <h3> HTML </h3>
+                <h3> Git/Github </h3>
               <p> Experienced</p>
               </div>
             </article>
@@ -214,18 +214,7 @@
               class = "icon"
               />
               <div>
-                <h3> CSS </h3>
-              <p> Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> JavaScript </h3>
+                <h3> Linux </h3>
               <p> Intermediate</p>
               </div>
             </article>
@@ -236,7 +225,18 @@
               class = "icon"
               />
               <div>
-                <h3> TypeScript </h3>
+                <h3> Pandas & NumPy </h3>
+              <p> Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> React.js </h3>
               <p> Basic</p>
               </div>
             </article>
@@ -247,8 +247,19 @@
               class = "icon"
               />
               <div>
-                <h3> Flutter </h3>
-              <p> Basic </p>
+                <h3> AWS </h3>
+              <p> Basic</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Snowflake </h3>
+              <p> Basic</p>
               </div>
             </article>
           </div>
@@ -275,7 +286,7 @@
               />
               <div>
                 <h3> Java </h3>
-              <p> Intermediate</p>
+              <p> Experienced</p>
               </div>
             </article>
             <article>
@@ -286,7 +297,7 @@
               />
               <div>
                 <h3> Python </h3>
-              <p> Intermediate</p>
+              <p> Experienced</p>
               </div>
             </article>
             <article>
@@ -297,18 +308,7 @@
               />
               <div>
                 <h3> C </h3>
-              <p> Basic </p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> Rust </h3>
-              <p> Basic </p>
+              <p> Intermediate </p>
               </div>
             </article>
             <article>
@@ -319,6 +319,17 @@
               />
               <div>
                 <h3> SQL </h3>
+              <p> Intermediate </p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> Rust </h3>
               <p> Basic </p>
               </div>
             </article>
