--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class = "experience-details-container">
       <div class = "about-containers">
         <div class = "details-container">
-          <h2 class = "experience-sub-title">Frontend</h2>
+          <h2 class = "experience-sub-title">Languages</h2>
           <div class = "article-container">
             <article>
               <img 
@@ -143,7 +143,7 @@
               class = "icon"
               />
               <div>
-                <h3> HTML </h3>
+                <h3> Go </h3>
               <p> Experienced</p>
               </div>
             </article>
@@ -154,7 +154,7 @@
               class = "icon"
               />
               <div>
-                <h3> CSS </h3>
+                <h3> Python </h3>
               <p> Experienced</p>
               </div>
             </article>
@@ -165,8 +165,8 @@
               class = "icon"
               />
               <div>
-                <h3> JavaScript </h3>
-              <p> Intermediate</p>
+                <h3> Java </h3>
+              <p> Experienced </p>
               </div>
             </article>
             <article>
@@ -176,8 +176,8 @@
               class = "icon"
               />
               <div>
-                <h3> TypeScript </h3>
-              <p> Basic</p>
+                <h3> HTML/CSS/JS </h3>
+              <p> Intermediate </p>
               </div>
             </article>
             <article>
@@ -187,8 +187,19 @@
               class = "icon"
               />
               <div>
-                <h3> Flutter </h3>
-              <p> Basic </p>
+                <h3> Rust & C  </h3>
+              <p> Intermediate </p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
+                <h3> SQL </h3>
+              <p> Intermediate </p>
               </div>
             </article>
           </div>
@@ -236,6 +247,17 @@
               class = "icon"
               />
               <div>
+                <h3> Scikit-learn </h3>
+              <p> Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img 
+              src = "assets/VerifiedBadge.png" 
+              alt = "Experience Icon" 
+              class = "icon"
+              />
+              <div>
                 <h3> React.js </h3>
               <p> Basic</p>
               </div>
@@ -247,90 +269,8 @@
               class = "icon"
               />
               <div>
-                <h3> AWS </h3>
+                <h3> AWS & Snowflake </h3>
               <p> Basic</p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> Snowflake </h3>
-              <p> Basic</p>
-              </div>
-            </article>
-          </div>
-        </div>
-        <div class = "details-container">
-          <h2 class = "experience-sub-title">Backend</h2>
-          <div class = "article-container">
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> Go Lang </h3>
-              <p> Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> Java </h3>
-              <p> Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> Python </h3>
-              <p> Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> C </h3>
-              <p> Intermediate </p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> SQL </h3>
-              <p> Intermediate </p>
-              </div>
-            </article>
-            <article>
-              <img 
-              src = "assets/VerifiedBadge.png" 
-              alt = "Experience Icon" 
-              class = "icon"
-              />
-              <div>
-                <h3> Rust </h3>
-              <p> Basic </p>
               </div>
             </article>
           </div>
@@ -352,16 +292,16 @@
       <div class = "details-container color-container">
         <div class = "article-container">
           <img 
-            src = "assets/MarginFi.png" 
+            src = "assets/RSSFeedCode.png" 
             alt = "Project 1" 
             class = "project-img"
           />
         </div>
-        <h2 class = "experience-sub-title project-title">Project One</h2>
+        <h2 class = "experience-sub-title project-title">RSS Feed Aggregator</h2>
         <div class = "btn-container">
           <button 
               class = "btn btn-color-2 project-btn" 
-              onclick = "location.href='https://github.com/'"
+              onclick = "location.href='https://github.com/shivdesai99/RSS-Feed-Aggregator'"
           >
             Github
           </button>
@@ -370,19 +310,18 @@
       <div class = "details-container color-container">
         <div class = "article-container">
           <img 
-            src = "assets/MLPhoto.jpg" 
+            src = "assets/PersonalPortfilioImg.png" 
             alt = "Project 2" 
             class = "project-img"
           />
         </div>
-        <h2 class = "experience-sub-title project-title">Project Two</h2>
+        <h2 class = "experience-sub-title project-title">Personal Portfolio</h2>
         <div class = "btn-container">
           <button 
               class = "btn btn-color-2 project-btn" 
-              onclick = "location.href='https://github.com/'"
+              onclick = "location.href='https://github.com/shivdesai99/Personal-Portfolio'"
           >
             Github
-          </button>
           </button>
         </div>
       </div>
